argo/apps/acolyte/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acolyte
  namespace: acolyte
  labels:
    app.kubernetes.io/name: acolyte
    app.kubernetes.io/instance: acolyte
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: acolyte
      app.kubernetes.io/instance: acolyte
  template:
    metadata:
      labels:
        app.kubernetes.io/name: acolyte
        app.kubernetes.io/instance: acolyte
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
        - name: dockerhub-credentials
      terminationGracePeriodSeconds: 30
      containers:
        - name: acolyte
          image: registry.gitlab.com/myzreal/ether/acolyte:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 1
              memory: 1024Mi
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 128Mi
